change user's infos in header
